# SFMLBlackjack

./: CMakeLists.txt  README.md  blackjackSFML-Info.plist  blackjackfunctions.cpp  blackjackfunctions.hpp  button.cpp  button.hpp  card.cpp  card.h  deck.cpp  deck.h  game.cpp  game.h  gamestate.h  genplayer.cpp  genplayer.h  hand.cpp  hand.h  house.cpp  house.h  main.cpp  player.cpp  player.h  suit.h  value.h
